Update documentation to version 4